# lift-utils

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/lift_utils/: index.doctree
.doctrees/autoapi/lift_utils/base/: index.doctree
.doctrees/autoapi/lift_utils/config/: index.doctree
.doctrees/autoapi/lift_utils/datatypes/: index.doctree
.doctrees/autoapi/lift_utils/demos/: index.doctree
.doctrees/autoapi/lift_utils/errors/: index.doctree
.doctrees/autoapi/lift_utils/lift/: index.doctree
.github/workflows/: build-sphinx.yml
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/lift_utils/: index.rst.txt
autoapi/: index.html
autoapi/lift_utils/: index.html
autoapi/lift_utils/base/: index.html
autoapi/lift_utils/config/: index.html
autoapi/lift_utils/datatypes/: index.html
autoapi/lift_utils/demos/: index.html
autoapi/lift_utils/errors/: index.html
autoapi/lift_utils/header/: index.html
autoapi/lift_utils/lexicon/: index.html
autoapi/lift_utils/lift/: index.html
autoapi/lift_utils/utils/: index.html
demos/: compare_cawls.py  find_all_by_part_of_speech.py  update_glosses_by_cawl_num.py
docs/source/: conf.py  index.rst
scripts/: build-docs.sh  build-package.sh  run-profiler.sh  run-tests.sh  upload-package.sh
sphinx/: requirements.txt
sphinx/source/: conf.py  index.rst
src/lift_utils/: __init__.py  base.py  config.py  datatypes.py  demos.py  errors.py  header.py  lexicon.py  lift.py  lift.py.bak  reader.py  utils.py
tests/: __init__.py  multiple_inheritance.py  test_add_info_v0_13_FW.py  test_base.py  test_base_FW.py  test_base_readxml_FW.py  test_base_readxml_v0_13-FW.py  test_base_readxml_v0_13_FW.py  test_base_readxml_v0_15.py  test_base_readxml_vLATEST.py  test_base_writexml_v0_13_FW.py  test_base_writexml_v0_15.py  test_header_readxml_v0_13_FW.py  test_header_readxml_v0_15.py  test_header_writexml_v0_13_FW.py  test_header_writexml_v0_15.py  test_lexicon_readxml_v0_13_FW.py  test_lexicon_readxml_v0_15.py  test_lexicon_v0_13_FW.py  test_lexicon_writexml_v0_13_FW.py  test_lexicon_writexml_v0_15.py  test_lift_readxml_v0_13_FW.py  utils.py
tests/data/: Pumi_out.lift  Pumi_out.lift-ranges  entry_good.lift  entry_good.lift.bak  entry_good_FW.lift  entry_good_v0.13_FW.lift  entry_good_v0.15.lift  header_good_v0.13_FW.lift  header_good_v0.15.lift  lexicon_good_v0.13_FW.lift  lexicon_good_v0.13_FW.lift-ranges  lexicon_good_v0.15.lift  pumi_in.lift-ranges  sango_out.lift-ranges
tests/data/FLEx export/: FLEx export.lift  FLEx export.lift-ranges
tests/data/Pumi_2019/: Pumi_2019.lift  Pumi_2019.lift-ranges
tests/data/sango filtered_updating fields/: sango filtered_updating fields.lift
tests/data/test-export/: in.lift  out.lift  out.lift-ranges  test-export.lift  test-export.lift-ranges
(+33 files in other folders)
