[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lift_utils"
description = "Read and write LIFT files in Python."
readme = "README.md"
license-files = ["LICENSE"]
authors = [
  { name="Nate Marti", email="nate_marti@sil.org" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "lxml>=5.2.1",
    "Unidecode>=1.3.8",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["tabulate"]

[project.urls]
Documentation = "https://sil-car.github.io/lift-utils"
Homepage = "https://sil-car.github.io/lift-utils"
Issues = "https://github.com/sil-car/lift-utils/issues"
Source = "https://github.com/sil-car/lift-utils"

[tool.setuptools.dynamic]
version = {attr = "lift_utils.config.LIB_VERSION"}
